fix(ui5-view-settings-dialog): visual align group headers

--- a/packages/fiori/src/themes/ViewSettingsDialog.css
+++ b/packages/fiori/src/themes/ViewSettingsDialog.css
@@ -64,8 +64,12 @@
 	height: 100%;
 }
 
-[ui5-ul-groupheader] {
+[ui5-li-groupheader] {
 	overflow: hidden;
+}
+
+[ui5-li-groupheader]::part(native-li){
+	margin: 0;
 }
 
 [ui5-dialog]::part(content) {
